--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ALAB DOM Manipulation</title>
-    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./styles.css"/>
+    <script defer src="./script.mjs"></script>
   </head>
 
   <body>
@@ -11,6 +14,5 @@
     </header>
     <main></main>
 
-    <script src="src/index.js"></script>
   </body>
 </html>
